# backend/internal/platform/db/gen/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.27.0
+//   sqlc v1.31.1
 
 package gen
 
@@ -98,6 +98,8 @@ type Item struct {
 	IsActive       bool
 	CreatedAt      time.Time
 	UpdatedAt      time.Time
+	TrackStock     bool
+	StockQty       string
 }
 
 type Membership struct {
@@ -166,6 +168,7 @@ type Org struct {
 	KraCmcKeyEnc       []byte
 	EtimsFailedReason  *string
 	EtimsInitializedAt *time.Time
+	DarajaStatus       string
 }
 
 type OrgInvite struct {
